--- a/src/index.css
+++ b/src/index.css
@@ -151,3 +151,40 @@
 .panel-scroll {
   overflow-y: scroll;
 }
+
+.modal {
+  z-index: 1;
+  position: fixed;
+  display: none;
+  inset: 0;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  background-color: rgba(0,0,0,0.8);
+}
+
+.modal-content {
+  position: relative;
+  margin: 0;
+}
+
+.modal-img {
+  object-fit: cover;
+  max-width:100%;
+  max-height:100%;
+}
+
+.close {
+  color: #aaaaaa;
+  font-size: 28px;
+  font-weight: bold;
+  position: absolute;
+  right: 10px;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
